# e-valuator

./: .gitignore  LICENSE  README.md  pyproject.toml
data/: hotpotqa_cleaned_w_scores.csv  math_cleaned_w_scores.csv  mmlupro_cleaned_w_scores.csv
demos/collect_verifier_scores/: README.md  collect_chess_example.py  collect_math_example.py
demos/notebooks/: chess_example.ipynb  hotpot_example.ipynb  math_example_tokens.ipynb
src/evaluator/: __init__.py  evaluator.py  utils.py
tests/: test_workflow.py
